@@ -78,14 +78,15 @@ public class VoiceService {
     }
 
     // 팔로워들 음성 스토리 리스트 가져오기
-    public List<Voice> findFollwerVoices(String personalId) {
-        User user = userRepository.findByPersonalId(personalId).orElse(null);
-        List<Follow> followers = followRepository.findByFollower(user);
-        List<User> users = followers.stream().map(follow -> follow.getFollower())  // follower의 follower를 가져옴
-                .collect(Collectors.toList());
-        List<Voice> voices = voiceRepository.findAllByUserIdInOrderByCreatedAtDesc(users);
+    public List<Voice> findFollweeVoices(String personalId) {
+        User user = userRepository.findByPersonalId(personalId).orElseThrow(
+                () -> new IllegalArgumentException("User not found with personalId: " + personalId));
+        List<Follow> follows = followRepository.findByFollower(user);
+        List<User> users = follows.stream().map(Follow::getFollowee)  // follower의 followee를 가져옴
+                .toList();
+        List<String> userIds = users.stream().map(User::getId).collect(Collectors.toList());
 
-        return voices;
+        return voiceRepository.findAllByUser_IdInOrderByCreatedAtDesc(userIds);
     }
 
     // 음성 스토리 삭제
